# python-project-50

./: .README.md.swp  .coverage  .flake8  .gitignore  Makefile  README.md  coverage.xml  pyproject.toml  setup.cfg
.github/workflows/: ci.yml  main.yml  python-app.yml
gendiff/: constants.py  loader.py
gendiff/scripts/: gendiff.py
hexlet_code/: parser.py
hexlet_code/scripts/: file1.yml  file2.yml  gendiff.py
tests/: test_gendiff.py
tests/fixtures/: file1.json  file1.yml
